# deedsBCV

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.txt
cmake/: conan.cmake
src/: CMakeLists.txt  MINDSSCbox.h
src/deeds/: CMakeLists.txt  deedsBCV.cpp  deedsBCV.h  imageIOgzType.h  main.cpp  main2.cpp
src/nifti/: CMakeLists.txt
